--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,25 +1,22 @@
-<footer class="footer text-muted">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 order-last order-lg-first">
-        <ul class="list-inline">
-          <li class="list-inline-item">{{ .Site.Params.footer | safeHTML }}</li>
-        </ul>
-      </div>
-      <div class="col-lg-4 text-lg-center">
-        <ul class="list-inline">
-          {{ range .Site.Menus.social -}}
-            <li class="list-inline-item"><a href="{{ .URL | absURL }}" target="_blank">{{ .Pre | safeHTML }}<span class="ms-2 visually-hidden">{{ .Name | safeHTML }}</span></a></li>
-          {{ end -}}
-        </ul>
-      </div>
-      <div class="col-lg-6 order-first order-lg-last text-lg-end">
-        <ul class="list-inline">
-          {{ range .Site.Menus.footer -}}
-            <li class="list-inline-item"><a href="{{ .URL | absURL }}" target="_blank"><span style="margin-right: 5px;">{{ .Name }}</span> {{ .Pre | safeHTML }}</a></li>
-          {{ end -}}
-        </ul>
-      </div>
+<!-- Footer Start -->
+<footer class="footer footer-light footer-bar">
+    <div class="footer-py-30">
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col-sm-6">
+                    <div class="text-sm-start">
+                        <p class="mb-0">
+                            {{ $yearToken := (cond (isset .Site.Params (lower "copyrightYearToken")) $.Site.Params.copyrightYearToken ":YEAR:") }}
+                            {{ replace $.Site.Params.footer.copyright $yearToken (string (now.Format "2006")) | markdownify }}
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                    <!-- <p>Privacy</p> -->
+                </div><!--end col-->
+            </div><!--end row-->
+        </div><!--end container-->
     </div>
-  </div>
-</footer>
+</footer><!--end footer-->
+<!-- Footer End -->
